# WoR_Worlds_Simulatie

./: .gitignore  README.md  demo.sh
docs/: Class Diagram.asta  Gebruikershandleiding.docx  Gebruikershandleiding.odt  Ontwerpdocumentatie.docx  Ontwerpdocumentatie.odt
msg_srv/: CMakeLists.txt  package.xml
msg_srv/msg/: ProgrammedPosition.msg  ServoCommand.msg
msg_srv/srv/: EmergencyStop.srv  MultiServoCommand.srv  SingleServoCommand.srv  Skip.srv
ros2_ws/: frames_2023-10-19_16.48.19.gv
ros2_ws/msg_srv/: CMakeLists.txt
ros2_ws/msg_srv/msg/: Move.msg
ros2_ws/msg_srv/srv/: MoveToPosition.srv  PickupCup.srv
ros2_ws/simple_sim_movement/: CMakeLists.txt  package.xml
ros2_ws/simple_sim_movement/launch/: display.launch.py
ros2_ws/simple_sim_movement/rviz/: urdf.rviz
ros2_ws/simple_sim_movement/src/: CupStatePublisher.cpp  CupStatePublisher.hpp  cup_main.cpp  main.cpp  mathUtils.cpp  mathUtils.hpp  testnode.cpp  testnode.hpp
ros2_ws/simple_sim_movement/src/cli_node/: mainCommunicatorNode.cpp
ros2_ws/simple_sim_movement/src/cup_node/: cupNode.cpp  cupNode.hpp
ros2_ws/simple_sim_movement/src/sim_node/: commandParser.cpp  testnode.cpp  testnode.hpp
ros2_ws/simple_sim_movement/src/testingMarker/: meshPub.cpp
ros2_ws/simple_sim_movement/src/utils/: servoUtils.cpp  servoUtils.hpp
ros2_ws/simple_sim_movement/stl/: cup.stl
ros2_ws/simple_sim_movement/urdf/: lynxmotion_arm.urdf  redCup.urdf
ros2_ws/wor_simulation_testing/: CMakeLists.txt  package.xml  run.txt
ros2_ws/wor_simulation_testing/launch/: display.launch.py
ros2_ws/wor_simulation_testing/src/: commandParser.cpp  commandParser.hpp  communicatorNode.cpp  communicatorNode.hpp  main.cpp  mainCommunicatorNode.cpp  servoUtils.hpp  testnode.cpp  testnode.hpp
simple_sim_movement/: CMakeLists.txt  democommands.txt  example_commands.txt  package.xml  run.txt
simple_sim_movement/rviz/: urdf.rviz
simple_sim_movement/src/cup_node/: cupNode.cpp  cupNode.hpp  main.cpp
simple_sim_movement/src/demo_node/: main.cpp
simple_sim_movement/src/sim_node/: commandParser.cpp  commandParser.hpp  testnode.cpp  testnode.hpp
simple_sim_movement/src/utils/: servoUtils.cpp  servoUtils.hpp
simple_sim_movement/urdf/: lynxmotion_arm.urdf
wor_simulation_testing/launch/: display.launch.py
wor_simulation_testing/src/: main.cpp  testnode.hpp
